# Stavanger

./: CMakeLists.txt  Engine.cpp  Engine.h  Helper.cpp  Helper.h  MoveGenerator.cpp  MoveGenerator.h  Position.cpp  Position.h  README.md  main.cpp
.github/workflows/: testing.yml  tests.yml
tests/: tests.cpp
